Cleanup code & reduce logging