@@ -10,31 +10,17 @@ import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.persistence.PersistentDataType;
 import py660.pyMC.PyMC;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Objects;
 
 public abstract class AbstractSubstrate {
-    public enum SubstrateType {
-        RANDOMIZER("Gem Randomizer"),
-        WEAK_UPGRADER("Weak Gem Upgrader"),
-        UPGRADER("Gem Upgrader");
-
-        private final String title;
-        private SubstrateType(String title) {
-            this.title = title;
-        }
-        public String getTitle() {
-            return title;
-        }
-    }
-
     public static ItemStack buildSubstrate(SubstrateType type) {
         ItemStack gem = new ItemStack(Material.PHANTOM_MEMBRANE, 1);
         ItemMeta meta = gem.getItemMeta();
         assert meta != null;
         meta.setDisplayName(type.getTitle());
         meta.setRarity(ItemRarity.RARE);
-        meta.setLore(Arrays.asList(ChatColor.BLUE + "Reactor Substrate" + ChatColor.RESET));
+        meta.setLore(List.of(ChatColor.BLUE + "Reactor Substrate" + ChatColor.RESET));
         meta.setMaxStackSize(1);
         meta.setItemModel(new NamespacedKey(PyMC.getInstance(), "substrates/" + type.name()));
         meta.setEnchantmentGlintOverride(true);
@@ -45,10 +31,26 @@ public abstract class AbstractSubstrate {
     }
 
     public static boolean isSubstrate(ItemStack substrate) {
-        return Objects.equals(substrate.getItemMeta().getPersistentDataContainer().get(new NamespacedKey(PyMC.getInstance(), "category"), PersistentDataType.STRING), "substrate");
+        return Objects.equals(Objects.requireNonNull(substrate.getItemMeta()).getPersistentDataContainer().get(new NamespacedKey(PyMC.getInstance(), "category"), PersistentDataType.STRING), "substrate");
     }
 
     public static SubstrateType getType(ItemStack substrate) {
-        return EnumUtils.getEnum(SubstrateType.class, substrate.getItemMeta().getPersistentDataContainer().get(new NamespacedKey(PyMC.getInstance(), "type"), PersistentDataType.STRING));
+        return EnumUtils.getEnum(SubstrateType.class, Objects.requireNonNull(substrate.getItemMeta()).getPersistentDataContainer().get(new NamespacedKey(PyMC.getInstance(), "type"), PersistentDataType.STRING));
+    }
+
+    public enum SubstrateType {
+        RANDOMIZER("Gem Randomizer"),
+        WEAK_UPGRADER("Weak Gem Upgrader"),
+        UPGRADER("Gem Upgrader");
+
+        private final String title;
+
+        SubstrateType(String title) {
+            this.title = title;
+        }
+
+        public String getTitle() {
+            return title;
+        }
     }
 }
